--- a/notes/templates/navigation.html
+++ b/notes/templates/navigation.html
@@ -31,9 +31,10 @@
         <ul>
             <li><a class="active" href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'contact' %}">Contact</a></li>
             <li><a href="{% url 'signup' %}">User Signup</a></li>
             <li><a href="{% url 'login' %}">User Login</a></li>
-            
+            <li><a href="{% url 'login_admin' %}">Admin Login</a></li>
         </ul>
     </nav>
 
