--- a/notes/templates/index.html
+++ b/notes/templates/index.html
@@ -29,8 +29,10 @@
         <ul>
             <li><a class="active" href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'contact' %}">Contact</a></li>
             <li><a href="{% url 'signup' %}">User Signup</a></li>
             <li><a href="{% url 'login' %}">User Login</a></li>
+            <li><a href="{% url 'login_admin' %}">Admin Login</a></li>
         </ul>
     </nav>
 </header>
@@ -43,6 +45,33 @@
 </section>
 <!-- home section ends -->
 
+
+<!-- footer section starts  -->
+<div class="footer">
+    <div class="box-container">
+        <div class="box">
+            <h3>branch locations</h3>
+            <a href="#">Bhopal</a>
+            <a href="#">India</a>
+        </div>
+
+        <div class="box">
+            <h3>quick links</h3>
+            <a href="{% url 'index' %}">home</a>
+            <a href="{% url 'about' %}">about</a>
+            <a href="{% url 'contact' %}">contact</a>
+       </div>
+
+        <div class="box">
+            <h3>contact info</h3>
+            <p> <i class="fas fa-map-marker-alt"></i> C-Sector Indrapuri Bhopal 462021. </p>
+            <p> <i class="fas fa-envelope"></i> info@gmail.com </p>
+            <p> <i class="fas fa-phone"></i> +91 1234567890 </p>
+        </div>
+    </div>
+    <h1 class="credit">All Rights Reserved</h1>
+</div>
+<!-- footer section ends -->
 
 <!-- jquery cdn link  -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
